<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button

        android:id="@+id/btnLayoutLineal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textBtnLineal"
        android:layout_marginTop="120dp"
        />
    <Button

        android:id="@+id/btnLayoutTabla"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textBtnTabla"
        android:layout_below="@+id/btnLayoutLineal"/>
    <Button

    android:id="@+id/btnLayoutRelativo"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/textBtnRelativo"
        android:layout_below="@+id/btnLayoutTabla"/>

    <Button

    android:id="@+id/btnLayoutGrid"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/textBtnGrid"
        android:layout_below="@+id/btnLayoutRelativo"/>

</RelativeLayout>
