<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal">

    <AnalogClock
        android:id="@+id/reloj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reloj"
        android:text="@string/checkBoxPrueba"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBtnPrueba"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelPrueba"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
